<resources>
    <string name="app_name">Game_App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login"><b>LOGIN</b></string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="sign_up">SIGN UP</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="question_mark">\???</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
