<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_screen">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:background="@drawable/register_bg">
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.1">
        </RelativeLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SIGN UP"
            android:textColor="#FFF"
            android:fontFamily="@font/aller_bold"
            android:textStyle="bold"
            android:textSize="24sp"></TextView>

        <View
            android:layout_width="55dp"
            android:layout_height="1.8dp"
            android:background="#FFF"></View>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="180dp"
        android:background="@drawable/border"
        android:weightSum="7">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="80dp"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:layout_marginHorizontal="15dp"
                >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/name"
                android:fontFamily="@font/colgate_ready_light_italic"
                android:textColor="#038787"
                android:backgroundTint="@color/gradient_bg"
                android:paddingLeft="15dp"
                android:inputType="textPersonName"
                android:autofillHints="@string/name"/>

            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="15dp"
                android:weightSum="3"
                android:background="@drawable/edit_text_background">


                <EditText
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:layout_weight="2.6"
                    android:paddingLeft="15dp"
                    android:fontFamily="@font/colgate_ready_light_italic"
                    android:textColor="#038787"
                    android:backgroundTint="@color/gradient_bg"
                    android:autofillHints="@string/email">
                </EditText>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:gravity="center">
                    <RelativeLayout
                        android:layout_width="1.7dp"
                        android:background="@color/editext_border_color"
                        android:layout_height="fill_parent"
                        android:layout_marginVertical="8dp">
                    </RelativeLayout>
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/ic_markunread_black_24dp">
                    </ImageView>

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:layout_marginHorizontal="15dp"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/username"
                    android:fontFamily="@font/colgate_ready_light_italic"
                    android:textColor="#038787"
                    android:backgroundTint="@color/gradient_bg"
                    android:paddingLeft="15dp"
                    android:inputType="textPersonName"
                    android:autofillHints="@string/username"/>

            </LinearLayout>
        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="15dp"
                android:weightSum="3"
                android:background="@drawable/edit_text_background">


                <EditText
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_weight="2.6"
                    android:paddingLeft="15dp"
                    android:fontFamily="@font/colgate_ready_light_italic"
                    android:textColor="#038787"
                    android:backgroundTint="@color/gradient_bg"
                    android:autofillHints="@string/password">
                </EditText>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:gravity="center">
                    <RelativeLayout
                        android:layout_width="1.7dp"
                        android:background="@color/editext_border_color"
                        android:layout_height="fill_parent"
                        android:layout_marginVertical="8dp">
                    </RelativeLayout>
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/ic_remove_red_eye">
                    </ImageView>

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="15dp"
                android:weightSum="3"
                android:background="@drawable/edit_text_background">


                <EditText
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:layout_weight="2.6"
                    android:paddingLeft="15dp"
                    android:fontFamily="@font/colgate_ready_light_italic"
                    android:textColor="#038787"
                    android:backgroundTint="@color/gradient_bg"
                    android:autofillHints="@string/confirm_password">
                </EditText>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:gravity="center">
                    <RelativeLayout
                        android:layout_width="1.7dp"
                        android:background="@color/editext_border_color"
                        android:layout_height="fill_parent"
                        android:layout_marginVertical="8dp">
                    </RelativeLayout>
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/ic_remove_red_eye">
                    </ImageView>

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.4"
            android:gravity="center_vertical">


            <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="15dp"
                android:fontFamily="@font/new_colgate_heavyitalic"
                android:textSize="20sp"
                android:textColor="#fff"
                android:text="@string/sign_up"
                android:background="@drawable/sign_up_btn_bg"
                android:id="@+id/id_signup_button"
                ></Button>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="horizontal"
            android:gravity="center_horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:fontFamily="@font/regular_aller"
                android:textColor="#585757"
                android:text="Already have an account?"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SIGN IN"
                android:textColor="@color/gradient_color2"
                android:fontFamily="@font/aller_bold"
                android:layout_marginLeft="4dp"
                android:id="@+id/id_already_signin"></TextView>

        </LinearLayout>



    </LinearLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:gravity="center_horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:scaleType="centerCrop"
            android:src="@drawable/female_image2">

        </de.hdodenhof.circleimageview.CircleImageView>



        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="105dp"
            android:layout_marginLeft="88dp"
            android:src="@drawable/pencil">

        </de.hdodenhof.circleimageview.CircleImageView>
    </RelativeLayout>



</RelativeLayout>