<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Screen">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:gravity="center_horizontal|center_vertical"
            android:background="@drawable/login_bg">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/logo3x"
                android:layout_marginBottom="55dp"></ImageView>



        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.1">
        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="250dp"
        android:background="@drawable/border"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1.1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aller_bold"
                android:text="LOGIN"
                android:textColor="@color/gradient_color2"
                android:textSize="22sp"
                android:textStyle="bold"></TextView>

            <View
                android:layout_width="46dp"
                android:layout_height="1.9dp"
                android:background="#0AA6A6"></View>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="15dp"
            android:weightSum="3"
            android:background="@drawable/edit_text_background">


            <EditText
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:hint="@string/email"
                android:fontFamily="@font/colgate_ready_light_italic"
                android:inputType="textEmailAddress"
                android:layout_weight="2.6"
                android:paddingLeft="15dp"
                android:textColor="#038787"
                android:textStyle="italic"
                android:backgroundTint="@color/gradient_bg"
                android:autofillHints="@string/email">
            </EditText>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center">
            <RelativeLayout
                android:layout_width="1.7dp"
                android:background="@color/editext_border_color"
                android:layout_height="fill_parent"
                android:layout_marginVertical="8dp">
            </RelativeLayout>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_markunread_black_24dp">
            </ImageView>

            </RelativeLayout>

        </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="15dp"
                android:weightSum="3"
                android:background="@drawable/edit_text_background">


                <EditText
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:hint="@string/password"
                    android:fontFamily="@font/colgate_ready_light_italic"
                    android:inputType="textPassword"
                    android:layout_weight="2.6"
                    android:paddingLeft="15dp"
                    android:textColor="#038787"
                    android:textStyle="italic"
                    android:backgroundTint="@color/gradient_bg"
                    android:autofillHints="@string/password">
                </EditText>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:gravity="center">
                    <RelativeLayout
                        android:layout_width="1.7dp"
                        android:background="@color/editext_border_color"
                        android:layout_height="fill_parent"
                        android:layout_marginVertical="8dp">
                    </RelativeLayout>
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/ic_remove_red_eye">
                    </ImageView>

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical">


            <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="15dp"
                android:text="@string/login"
                android:textAlignment="center"
                android:fontFamily="@font/new_colgate_heavyitalic"
                android:background="@drawable/continue_button"
                android:textSize="20sp"
                android:textColor="#fff"
                android:id="@+id/login_button">

            </Button>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="horizontal"
            android:gravity="center_horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular_aller"
                android:textColor="#585757"
                android:text="Don't have an account?"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="SIGN UP"
                android:textColor="@color/gradient_color2"
                android:fontFamily="@font/aller_bold"
                android:layout_marginLeft="4dp"
                android:id="@+id/id_text_signup"></TextView>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>